--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
             <img src="image/menu.png">
         </div>
     </div>
+    <div class="banner">
+        <div class="left-column">
+            <div class="sharch-box">
+                <img src="image/search.png">
+                <input type="text">
+            </div>
+            <h1>Straw<span>berries</span></h1>
+            <h3>Always fills your<span> heart with joy</span></h3>
+            <p>
+                the standard chunk of lorem Ipsum used since the 
+                1500s is reproduced for those interested.<br> Duis erat 
+                ex, pretium et blendit nec,ductum sit amet metus.
+            </p>
+        </div>
+
+
+
+
+        <div class="right-column">
+            <img src="image/feature.png">
+        </div>
+    </div>
  </div>   
     
 </body>
