--- a/index.html
+++ b/index.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Fruitopia web design by akib</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
+
 <body>
- <div class="Hero">
-    <div class="navbar">
-        <img src="image/logo.png">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="navbar-icons">
-            <img src="image/bell.png">
-            <img src="image/user.png">
-            <img src="image/menu.png">
-        </div>
-    </div>
-    <div class="banner">
-        <div class="left-column">
-            <div class="sharch-box">
-                <img src="image/search.png">
-                <input type="text">
+    <div class="Hero">
+        <div class="navbar">
+            <img src="image/logo.png">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="navbar-icons">
+                <img src="image/bell.png">
+                <img src="image/user.png">
+                <img src="image/menu.png">
             </div>
-            <h1>Straw<span>berries</span></h1>
-            <h3>Always fills your<span> heart with joy</span></h3>
-            <p>
-                the standard chunk of lorem Ipsum used since the 
-                1500s is reproduced for those interested.<br> Duis erat 
-                ex, pretium et blendit nec,ductum sit amet metus.
-            </p>
         </div>
+        <div class="banner">
+            <div class="left-column">
+                <div class="sharch-box">
+                    <img src="image/search.png">
+                    <input type="text">
+                </div>
+                <h1>Straw<span>berries</span></h1>
+                <h3>Always fills your<span> heart with joy</span></h3>
+                <p>
+                    the standard chunk of lorem Ipsum used since the
+                    1500s is reproduced for those interested.<br> Duis erat
+                    ex, pretium et blendit nec,ductum sit amet metus.
+                </p>
+                <div class="btn">
+                    <button type="button" class="primary-btn">Learn More</button>
+                    <button type="button">Watch Video</button>
+                </div>
+                <div class="social-icons">
+                    <img src="image/twitter.png">
+                    <img src="image/instagram.png">
+                    <img src="image/pinterest.png">
+                    <img src="image/facebook.png">
+                </div>
+            </div>
 
 
 
 
-        <div class="right-column">
-            <img src="image/feature.png">
+            <div class="right-column">
+                <img src="image/feature.png">
+            </div>
         </div>
     </div>
- </div>   
-    
+
 </body>
+
 </html>
